Scrollable trending and you may like created

--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,16 @@ html,body,#root {
   display: flex;
   height: fit-content;
   width:  fit-content;
-  outline: 5px solid red;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+     /* Hide scrollbar for IE, Edge and Firefox */
+ .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+}
 
 
 /* CustomTabs.css */
